feat: adptar o componente cassino para o cassino ao vivo

--- a/src/app/casino/wall/components/wall-games-search/wall-games-search.component.html
+++ b/src/app/casino/wall/components/wall-games-search/wall-games-search.component.html
@@ -67,7 +67,7 @@
                             <span class="search-results__title">{{ 'geral.jogos' | translate }} ({{ gameList.length }})</span>
                             <div class="search-results__list">
                                 <app-wall-game-card
-                                    *ngFor="let game of gameList | paginate: { itemsPerPage: qtdItens, currentPage: 1 }"
+                                    *ngFor="let game of gameList"
                                     [game]="game"
                                     [isCardInline]="false"
                                     [isDemo]="isDemo"
