--- a/src/app/casino/wall/components/wall-provider-filter-modal/wall-provider-filter-modal.component.scss
+++ b/src/app/casino/wall/components/wall-provider-filter-modal/wall-provider-filter-modal.component.scss
@@ -102,6 +102,7 @@
         gap: 30px;
 
         border-radius: 5px;
+        position: relative;
 
         &__footer {
             justify-content: flex-end;
