fix: adjust game filter color

--- a/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
+++ b/src/app/casino/wall/components/wall-games-search/wall-games-search.component.scss
@@ -211,7 +211,7 @@
             border-left: 0;
             border-radius: 5px 5px 0 0 ;
 
-            background-color: var(--foreground-inputs-odds);
+            background-color: var(--header);
         }
 
         &--actived .games-search__close {
