--- a/src/app/loterias/loteria-popular/loteria-popular.component.css
+++ b/src/app/loterias/loteria-popular/loteria-popular.component.css
@@ -3,6 +3,25 @@
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
+    position: relative;
+}
+
+.expand-btn {
+    position: absolute;
+    right: 8px;
+    cursor: pointer;
+    font-size: 26px;
+    color: var(--foreground-highlight);
+}
+
+.desktop-fullscreen {
+    position: fixed;
+    top: 0;
+}
+
+.desktop-fullscreen .loteria-frame {
+    height: 100vh;
+    margin: 0;
 }
 
 .loteria-frame {
