--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.css
@@ -126,8 +126,8 @@ owl-carousel-o {
     background: var(--game);
     color: var(--foreground-game);
     border: 1px solid var(--highlight);
-    width: 340px;
-    height: 170px;
+    width: 300px;
+    height: 135px;
     border-radius: 5px;
     padding: 10px 10px;
 
@@ -171,12 +171,12 @@ owl-carousel-o {
 
 .jogos-destaque .jogo .time1 .text-center,
 .jogos-destaque .jogo .time2 .text-center {
-
-    display: block;
-    width: 104px;
+    width: 96px;
     overflow: hidden;
-    text-wrap: nowrap;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .jogos-destaque .jogo .time1 .text-center {
@@ -213,7 +213,7 @@ owl-carousel-o {
     color: var(--foreground-inputs-odds);
     border-radius: 2px;
     flex: 1;
-    font-size: 12px;
+    font-size: 8px;
     padding: 4.5px;
 
     display: flex;
@@ -234,8 +234,8 @@ owl-carousel-o {
 }
 
 span.escudo img {
-    height: 32px;
-    width: 32px;
+    height: 20px;
+    width: 20px;
 }
 
 .loading-listagem .slider {
