--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
@@ -33,7 +33,7 @@
             <ng-template carouselSlide [id]="jogoDestaque.fi" [width]="widthCard">
                 <div class="jogo-destaque">
                     <div class="header">
-                        <span>
+                        <span [title]="jogoDestaque.campeonato?.nome">
                             {{ jogoDestaque.campeonato?.nome }}
                         </span>
                         <span>
@@ -43,7 +43,7 @@
 
                     <div class="jogo">
                         <div class="time1">
-                            <span class="text-center">{{ jogoDestaque.time_a_nome }}</span>
+                            <span class="text-center" [title]="jogoDestaque.time_a_nome">{{ jogoDestaque.time_a_nome }}</span>
                             <span *ngIf="jogoDestaque.time_a_img; else defaulImage" class="escudo">
                                 <img src="https://cdn.wee.bet/img/times/m/{{jogoDestaque.time_a_img}}.png" size="s" class="escudo-img">
                             </span>
@@ -63,7 +63,7 @@
                                     <img src="https://cdn.wee.bet/img/times/m/default.png" size="s" class="escudo-img">
                                 </span>
                             </ng-template>
-                            <span class="text-center flex-grow-1">{{ jogoDestaque.time_b_nome }}</span>
+                            <span class="text-center flex-grow-1" [title]="jogoDestaque.time_b_nome">{{ jogoDestaque.time_b_nome }}</span>
                         </div>
                     </div>
 
