--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -94,6 +94,7 @@
                                 [isLoggedIn]="isLoggedIn"
                                 [isDemo]="isDemo"
                                 [isCliente]="isCliente"
+                                cardType="inline"
                                 (openModalLogin)="abrirModalLogin()"
                             />
                         </div>
@@ -125,7 +126,6 @@
                     [isLoggedIn]="isLoggedIn"
                     [isDemo]="isDemo"
                     [isCliente]="isCliente"
-                    [isCardInline]="false"
                     (openModalLogin)="abrirModalLogin()"
                 />
             </div>
