--- a/src/app/casino/wall/components/wall-provider-filter-modal/wall-provider-filter-modal.component.scss
+++ b/src/app/casino/wall/components/wall-provider-filter-modal/wall-provider-filter-modal.component.scss
@@ -29,7 +29,7 @@
     }
 
     &__title {
-        color: #fff;
+        color: var(--foreground);
         font-size: 16px;
         font-weight: 600;
         line-height: 21px;
