feat: ajustes visuais

--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -21,7 +21,7 @@
     &__image {
         position: relative;
         width: 100%;
-        height: 102px;
+        height: min-content;
         border-radius: 5px;
         object-fit: cover;
     }
