--- a/src/app/casino/wall/components/wall-section/wall-section.component.html
+++ b/src/app/casino/wall/components/wall-section/wall-section.component.html
@@ -26,6 +26,7 @@
         *ngIf="showSeeAllButton"
         (click)="handleSeeAll()"
     >
-        {{'geral.verTodos' | translate}}
+        {{'geral.verTodos' | translate}} 
+        <i class="fa fa-solid fa-angle-right ml-2"></i>
     </a>
 </div>
