--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -2,7 +2,8 @@
     display: block;
     position: relative;
     width: 100%;
-    height: 37px;
+    height: auto;
+    min-height: 37px;
     padding: 6px 20px;
     background-color: var(--highlight);
     overflow: hidden;
@@ -24,7 +25,6 @@
     background-color: var(--header);
     color: var(--highlight);
     width: 60px;
-    height: 25px !important;
     margin-left: 6px;
     padding: 4px 7px !important;
     transition: width 0.3s, height 0.3s, font-size 0.3s;
@@ -43,7 +43,7 @@
 .indique-ganhe-card .btn-close {
     position: absolute;
     right: 30px;
-    top: 10px;
+    top: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,6 +57,7 @@
     width: 100%;
     height: 92px;
     display: flex;
+    justify-content: space-between;
     background-color: var(--header);
     color: var(--foreground-header);
 }
@@ -423,21 +424,29 @@ body .change-theme {
 
 @media only screen and (min-width: 1025px) {
     .btn-indique-ganhe-card:hover {
-        width: 80px;
-        height: 33px !important;
-        font-size: 15px;
+        width: 65px;
+        height: auto;
+        font-size: 13px;
     }
 }
 
-@media only screen and (max-width: 1024px) {
-    .indique-ganhe-card {
-        height: 50px;
+@media only screen and (max-width: 1281px) {
+    nav {
+        width: 100%;
+        max-width: 100vw;
+        overflow-x: auto;
+        height: 39px;
+        justify-content: start;
+        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25) inset;
+        background-color: var(--header);
     }
 
-    .indique-ganhe-card .btn-close {
-        right: 20px;
-        top: 12px;
-        align-items: normal;
+    .category {
+        height: 100%;
+    }
+
+    .category a {
+        font-size: 11px; /* ajuste fonte */
     }
 
     .header {
@@ -447,14 +456,73 @@ body .change-theme {
         border-bottom: 1px solid var(--foreground-header);
     }
 
-    nav {
-        background-color: var(--header);
+    .deposit-shortcut a {
+        height: 30px !important;
+        padding: 6px 11px;
+        font-size: 10px;
+    }
+
+    .menu-conta {
+        margin-right: 8px;
+    }
+
+    .menu-perfil {
+        height: 30px;
+        padding: 0 9px;
+    }
+
+    .menu-perfil div.user-card {
+        padding-right: 8px;
+    }
+
+    .menu-perfil .nome-usuario {
+        display: none;
+    }
+
+    .menu-perfil .saldo-usuario .olhinho {
+        display: none;
+    }
+
+    .menu-perfil .saldo-usuario span {
+        font-size: 10px;
+    }
+
+    .menu-perfil div.user-icon i {
+        font-size: 20px;
+    }
+
+    .logo {
+        max-height: 30px;
+        max-width: calc(40vw - 25px);
+    }
+
+    .btn {
+        white-space: nowrap;
+        padding: 5px 10px;
+
+        height: 38px;
+    }
+
+    .indique-ganhe-card .btn-close {
+        right: 20px;
+        top: 8px;
+        align-items: normal;
     }
 
     .saldos-item {
         text-align: center;
     }
 
+    .btn.btn-indique-ganhe-card {
+        height: 30px !important;
+    }
+
+    .btn.mr-4 {
+        margin-right: 10px !important;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
     .dropdown-menu {
         height: 100vh;
         max-height: 100%;
@@ -512,39 +580,6 @@ body .change-theme {
         justify-content: flex-end;
     }
 
-    .logo {
-        max-height: 30px;
-        max-width: calc(40vw - 25px);
-    }
-
-    .btn {
-        white-space: nowrap;
-        padding: 5px 10px;
-
-        height: 38px !important;
-    }
-
-    .btn.mr-4 {
-        margin-right: 10px !important;
-    }
-
-    nav {
-        width: 100%;
-        max-width: 100vw;
-        overflow-x: auto;
-        height: 39px;
-        justify-content: start;
-        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25) inset;
-    }
-
-    .category {
-        height: 100%;
-    }
-
-    .category a {
-        font-size: 11px; /* ajuste fonte */
-    }
-
     .side {
         justify-content: start;
     }
@@ -560,41 +595,6 @@ body .change-theme {
 
     .side-left {
         padding-left: 10px;
-    }
-
-    .deposit-shortcut a {
-        height: 30px !important;
-        padding: 6px 11px;
-        font-size: 10px;
-    }
-
-    .menu-conta {
-        margin-right: 8px;
-    }
-
-    .menu-perfil {
-        height: 30px;
-        padding: 0 9px;
-    }
-
-    .menu-perfil div.user-card {
-        padding-right: 8px;
-    }
-
-    .menu-perfil .nome-usuario {
-        display: none;
-    }
-
-    .menu-perfil .saldo-usuario .olhinho {
-        display: none;
-    }
-
-    .menu-perfil .saldo-usuario span {
-        font-size: 10px;
-    }
-
-    .menu-perfil div.user-icon i {
-        font-size: 20px;
     }
 }
 
